# NECspider

./: Cargo.toml  NECspider  music163.json  struct.Website.html  struct.Website.md  yesplaymusic.json
.cargo/: config.toml
.github/workflows/: build-android.yaml  build-windows.yaml  build.yml  doc.yml  init.yml  run-elf.yml  run.yml  rust.yml  static.yml  test.yml
src/: main-static.rs  main-test.rs  main.rs  spider.rs  static.rs  test.rs  test1.rs
