[package]
name = "NECspider"
version = "0.1.0"
edition = "2024"
default-run = "NECspider"

[[bin]]
name = "NECspider"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "static"
path = "src/static.rs"

[dependencies]
anyhow = "1.0.97"
backon = { version = "1.4.1", features = ["tokio-sleep"] }
bytes = "1"
indicatif = "0.17.11"
openssl = { version = "0.10.71", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["gzip", "brotli", "zstd", "deflate"], default-features = true }
tokio = { version = "1.44.0", features = ["full"] }
